# ai-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
bot/: logging.py  logs.py  main.py
bot/commands/: help.py  sumarize.py
bot/config/: access.toml  help_text.md
bot/modules/: openai_conversation.py  summarizer.py
bot/utilities/: access.py  gitbook_crawler.py  logging.py  pdf_reader.py  summary_generator.py  token.py  url_validator.py
notebooks/: langchain_tests.ipynb
scripts/: create_infra_aws.sh
terraform/: main.tf  run_terraform.sh  variables.tf
tests/assets/: count.txt
tests/bot/modules/: test_summarizer.py
